# sandbox-apps

./: .gitignore  README.md
apps/patchpilot-wp/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/patchpilot-wp/patchpilot_wp/: checks.py  main.py  storage.py
apps/patchpilot-wp/templates/: index.html
apps/patchpilot-wp/tests/: test_patchpilot.py
apps/restoreproof/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/restoreproof/restoreproof/: __init__.py  main.py  proof.py  storage.py
apps/restoreproof/templates/: index.html
apps/restoreproof/tests/: test_restoreproof.py
apps/runbook-forge-ai/: Dockerfile  MORNING_SUMMARY.md  README.md  RUNBOOK.md  overnight_prompt.txt  pyproject.toml
apps/runbook-forge-ai/runbook_forge/: __init__.py  bookstack.py  generator.py  main.py  smoke.py  storage.py
apps/runbook-forge-ai/runbook_forge_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/runbook-forge-ai/templates/: base.html  detail.html  index.html  preview.html
apps/runbook-forge-ai/tests/: test_generator.py  test_storage.py
apps/sermonclipper-ai/: README.md  pyproject.toml
apps/sermonclipper-ai/demo-output/: clips.json  clips.md
apps/sermonclipper-ai/src/sermonclipper/: __init__.py  cli.py  core.py  export.py  render.py  transcript.py
apps/sermonclipper-ai/tests/: test_core.py  test_export_render.py
apps/wp-carepulse/: Dockerfile  README.md  pyproject.toml
apps/wp-carepulse/templates/: index.html
apps/wp-carepulse/tests/: test_carepulse.py
apps/wp-carepulse/wp_carepulse/: checks.py  main.py  storage.py
apps/wp-carepulse/wp_carepulse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
apps/wp-fleetops/: Dockerfile  README.md  pyproject.toml
apps/wp-fleetops/templates/: index.html
apps/wp-fleetops/tests/: test_fleetops.py
apps/wp-fleetops/wp_fleetops/: fleet.py  main.py  storage.py
apps/wp-fleetops/wp_fleetops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
