[project]
name = "sermonclipper-ai"
version = "0.1.0"
description = "Find sermon highlight clips from YouTube transcripts and optionally render video clips."
requires-python = ">=3.11"
dependencies = [
  "youtube-transcript-api>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
sermonclipper = "sermonclipper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sermonclipper"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
